Prepare for MCP server submission
- Add privacy policy and support contact to README
- Create SECURITY.md with vulnerability disclosure process
- Add more keywords to package.json for better discoverability
- Create manifest.json for DXT packaging support
- Add build-dxt script for creating DXT packages
- Update .gitignore to exclude DXT artifacts
- Remove unnecessary files (test image, git-setup.sh)

--- a/package.json
+++ b/package.json
@@ -24,14 +24,25 @@
     "test:integration": "jest tests/integration",
     "lint": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.ts\"",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "build:dxt": "node scripts/build-dxt.js"
   },
   "keywords": [
     "mcp",
+    "mcp-server",
     "modelcontextprotocol",
     "server",
     "twitter",
-    "claude"
+    "x",
+    "twitter-api",
+    "x-api",
+    "claude",
+    "claude-ai",
+    "oauth",
+    "oauth2",
+    "social-media",
+    "tweet",
+    "api"
   ],
   "author": "Enes Cinar",
   "license": "MIT",
